Updated the settings and added the typescript snipppets

--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,7 @@
 // Place your settings in this file to overwrite the default settings
 {
 	"editor.fontFamily": "Inconsolata",
-	"editor.fontSize": 18,
-	
+	"editor.fontSize": 16,
+	"editor.tabSize": 2,
+	"jshint.enable": true
 }
